# khuise-admin-backend

./: .gitignore  .tool-versions  Dockerfile  Procfile  db.sqlite3  docker-compose.yml  dodo.py  manage.py  package.json  pyproject.toml  requirements.txt  tasks.py  test.pug
apps/accounts/: models.py  mutations.py  schema.py  types.py
apps/accounts/migrations/: 0001_initial.py  0002_auto_20210226_0930.py
apps/products/: admin.py  apps.py  filters.py  forms.py  layouts.py  models.py  mutations.py  schema.py  serializers.py  types.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_auto_20210211_0950.py  0003_auto_20210211_1312.py
apps/products/static/css/: style.css
apps/products/static/js/: create_products.js  script.js
apps/products/templates/: base.pug
apps/products/templates/layouts/: formset.pug
apps/products/templates/products/: product_create.pug  product_delete.pug  product_detail.pug  product_update.pug  products_list.pug
apps/produtos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/produtos/migrations/: 0001_initial.py
apps/produtos/static/js/: script.js
apps/produtos/templates/: base.html
apps/produtos/templates/produtos/: editarProduto.html  listaProdutos.html  novoProduto.html  verProduto.html
controleDeEstoque/: asgi.py  settings.py  urls.py  wsgi.py
produtos/: admin.py  forms.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py
produtos/static/css/: style.css
produtos/static/js/: script.js
produtos/templates/: base.html
produtos/templates/produtos/: editarProduto.html  listaProdutos.html  novoProduto.html
src/: .env.example  asgi.py  celery.py  database_routers.py  schema.py  settings.py  tasks.py  urls.py  utils.py  wsgi.py
src/settings/: .env.example  __init__.py  base.py  development.py  production.py
templates/accounts/: base.pug  login.pug  login.pug.html
templates/email/: admin_invite.pug
templates/layouts/: formset.pug  formset.pug.html
templates/products/: base.pug  base.pug.html  product_create.pug  product_create.pug.html  product_delete.pug  product_delete.pug.html  product_detail.pug  product_detail.pug.html  product_update.pug  product_update.pug.html  products_list.pug  products_list.pug.html
templates/registration/: login.html
