[tool.poetry]
name = "khuise-admin"
version = "0.1.0"
description = ""
authors = ["Vitor Daniel <vitor036daniel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
Django = {extras=["argon2"], version="^3.0.5"}
django-environ = "^0.4.5"
django-filter = "^2.4.0"
psycopg2 = "^2.8.6"
django-cors-headers = "^3.6.0"
django-heroku = "^0.3.1"
celery = "^5.0.5"
django-graphql-extensions = "^0.0.7"
Pillow = "^8.1.0"
gunicorn = "^20.0.4"
graphene-django = "^2.15.0"
django-storages = "^1.11.1"
django-graphql-auth = "^0.3.15"
django-rest-framework = "^0.1.0"
django-redis = "^4.12.1"
PyJWT = "1.7.0"
djongo = "^1.3.4"
dnspython = "^2.1.0"
boto3 = "^1.17.5"
graphene-django-cud = "^0.7.2"
graphene-file-upload = "^1.3.0"
django-templated-email = "^2.3.0"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.0"
commitizen = "^2.13.0"
django-debug-toolbar = "^3.2"
Werkzeug = "^1.0.1"
isort = "^5.7.0"
pyformat = "^0.7"
add-trailing-comma = "^2.0.2"
safety = "^1.10.3"
doit = "^0.33.1"
tornado = "^6.1"
django-mjml = "^0.10.2"
pypugjs = "^5.9.8"

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = "3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
